2017-12-19 : IsoformSwitchAnalyzeR 1.1.01
    - (The large version-bump is due to the release of the next itteration of Bioconductor)
    - Corrections for a lot of spelling mistakes in the package - huge shoutout to @khoegenauer for the suggestions
    - A few small updates to import functions making the progress even smoother
    -

2017-10-25 : IsoformSwitchAnalyzeR v0.99.15
    - Fixed a small mistake in the documentation causing build warnings

2017-10-22 : IsoformSwitchAnalyzeR v0.99.14
    - isoformSwitchTestDRIMSeq() was updated to per default use dmFilter()
    - Small updates to documentation better explaining the functionalities from udate 0.99.12

2017-10-19 : IsoformSwitchAnalyzeR v0.99.13
    - Version bump for Bioconductor to keep up

2017-10-12 : IsoformSwitchAnalyzeR v0.99.12
    - importIsoformExpression() have been completely redesigned to utilize the tximport package as well as implementing the option for inter-library normalization of abundance (TxPM) values.
    - The vignette got a thorough workover - huge shoutout to Maria Dalby for the help!
    - isoformSwitchTestDRIMSeq() was extended to also include the dmFilter() functionality as part of the workflow.
    - The internal process calculating gene expression from isoform expression was cast as its own function: isoformToGeneExp().
    - Fixed an error that could cause problems when importing CDSs from a GTF file
    - Updated descriptions and other minor style issues.

2017-06-01 : IsoformSwitchAnalyzeR v0.99.11
    - Fixes some issue raised in the Bioconductor review
        To adhere to Bioconductor conventions the subset() method was removed and replaced by the subsetSwitchAnalyzeRlist() function.
    - The importIsoformExpression() function was updated to support import of Transcript Per Million (TxPM) as the relative abundance measure (Instead of TPM and RPKM/FPKM, which are discontinued) when importing data from Kallisto, Salmon and RSEM.