@@ -32,7 +32,7 @@ analyzeSwitchConsequences <- function(
 
         if (alpha < 0 |
             alpha > 1) {
-            stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+            warning('The alpha parameter should usually be between 0 and 1 ([0,1]).')
         }
         if (alpha > 0.05) {
             warning(
@@ -548,7 +548,7 @@ compareAnnotationOfTwoIsoforms <- function(
 
         if (alpha < 0 |
             alpha > 1) {
-            stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+            warning('The alpha parameter should usually be between 0 and 1 ([0,1]).')
         }
         if (alpha > 0.05) {
             warning(
@@ -1991,7 +1991,7 @@ extractConsequenceSummary <- function(
         if (asFractionTotal) {
             if (alpha < 0 |
                 alpha > 1) {
-                stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+                warning('The alpha parameter should usually be between 0 and 1 ([0,1]).')
             }
             if (alpha > 0.05) {
                 warning(
