@@ -202,7 +202,7 @@ isoformSwitchTest <- function(
         if (reduceToSwitchingGenes) {
             if (alpha < 0 |
                 alpha > 1) {
-                stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+                warning('The alpha parameter should usually be between 0 and 1 ([0,1]).')
             }
             if (alpha > 0.05) {
                 warning(paste(
@@ -1126,7 +1126,7 @@ extractSwitchSummary <- function(
         }
         if (alpha < 0 |
             alpha > 1) {
-            stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+            warning('The alpha parameter must be between 0 and 1 ([0,1]).')
         }
         if (alpha > 0.05) {
             warning(paste(
@@ -1285,7 +1285,7 @@ extractTopSwitches <- function(
         }
         if (alpha < 0 |
             alpha > 1) {
-            stop('The alpha parameter must be between 0 and 1 ([0,1]).')
+            warning('The alpha parameter should usually be between 0 and 1 ([0,1]).')
         }
         if (alpha > 0.05) {
             warning(paste(
